--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/CREDITS-fml.txt
+/build/
+/README.txt
+/MinecraftForge-License.txt
+/eclipse/
+/forge-*-changelog.txt
+/LICENSE-fml.txt
+/MinecraftForge-Credits.txt
